horizontal scroll fix for community navigation

--- a/src/scss/color-vars.example.scss
+++ b/src/scss/color-vars.example.scss
@@ -2,10 +2,10 @@
 $hide-hcl-logo: false !default;
 $logo-left: false !default;
 $logo-left-width: 215px !default;
-$logo-left-height: 20px !default;
+$logo-left-height: 19px !default;
 $logo-right: false !default; // If set to a url, hcl logo will be hidden
 $logo-right-width: 215px !default;
-$logo-right-height: 20px !default;
+$logo-right-height: 19px !default;
 
 $text-color: black !default;
 $primary-color: #339933 !default;
