--- a/src/scss/community/community.scss
+++ b/src/scss/community/community.scss
@@ -129,6 +129,7 @@ div[data-dojo-attach-point="_tagSearchText"] a,
       position: absolute;
       width: 100%;
       top: $header-height;
+      padding: 15px 0;
       &.tabNavFixed {
         position: fixed;
         top: 0;
